HW06: first review